# rocket_cors

./: Cargo.toml  Rocket.toml
src/: main.rs
src/routes/: route.rs
src/static/: index.html
