[package]
name = "rocket_cors"
version = "0.1.0"
authors = ["osama530 <osamaqamar93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
rand = "0.7.3"

# for exercies
#serde_json = "1.0.58"